--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+  </head>
+  <body>
+    <form action="login.php" method="post" style="display:flex; justify-content:center; align-items:center">
+      <input type="text" name="user" id="user" placeholder="Name" />
+      <input type="submit" name="sbmt" id="sbmt" value="SUBMIT" />
+    </form>
+  </body>
+</html>
